force-app/main/default/objects/Proyecto__c/fields/Fecha_Datos_Economicos__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Datos_Economicos__c</fullName>
    <label>Fecha Datos Económicos</label>
    <type>Date</type>
</CustomField>