force-app/main/default/objects/Proyecto__c/fields/Fecha_de_creacion_Fecha_datos_economicos__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_creacion_Fecha_datos_economicos__c</fullName>
    <formula>DATEVALUE( CreatedDate) - Fecha_Datos_Economicos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha creación - Fecha datos económicos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>