force-app/main/default/objects/Proyecto__c/fields/Fecha_limite_supervision_OACI__c.field-meta.xml
<CustomField>
    <fullName>Fecha_limite_supervision_OACI__c</fullName>
    <label>Fecha límite supervisión OACI</label>
    <type>Date</type>
</CustomField>