force-app/main/default/objects/Proyecto__c/fields/FFC__c.field-meta.xml
<CustomField>
    <fullName>FFC__c</fullName>
    <description>El valor se trae de SAP</description>
    <label>Fecha Fin Proyecto</label>
    <type>Date</type>
</CustomField>