force-app/main/default/objects/Proyecto__c/fields/FFP__c.field-meta.xml
<CustomField>
    <fullName>FFP__c</fullName>
    <description>El valor se trae de SAP</description>
    <label>Fecha Fin Prevista Proyecto</label>
    <type>Date</type>
</CustomField>