force-app/main/default/objects/Proyecto__c/fields/impcontrato__c.field-meta.xml
<CustomField>
    <fullName>impcontrato__c</fullName>
    <description>El valor se trae de SAP</description>
    <label>Importe del Contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>