force-app/main/default/objects/Proyecto__c/fields/impcontratoEUR_real__c.field-meta.xml
<CustomField>
    <fullName>impcontratoEUR_real__c</fullName>
    <formula>IF(ISBLANK(impcontrato_real__c ),0,ROUND((impcontrato_real__c / Cambio_segun_moneda_local__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Contrato EUR (real)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>