force-app/main/default/objects/Proyecto__c/fields/Importe_calculado_contrato__c.field-meta.xml
<CustomField>
    <fullName>Importe_calculado_contrato__c</fullName>
    <description>Importe del proyecto calculado como la suma de los importes de contrato</description>
    <label>Importe calculado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>