force-app/main/default/objects/Proyecto__c/fields/Importe_calculado_contrato_EUR__c.field-meta.xml
<CustomField>
    <fullName>Importe_calculado_contrato_EUR__c</fullName>
    <formula>IF(ISBLANK(Importe_calculado_contrato__c),0,ROUND((Importe_calculado_contrato__c/ Cambio_segun_moneda_local__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe calculado (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>