force-app/main/default/objects/Proyecto__c/fields/Importe_Contrato_EUR__c.field-meta.xml
<CustomField>
    <fullName>Importe_Contrato_EUR__c</fullName>
    <formula>IF(ISBLANK(impcontrato__c),0,ROUND((impcontrato__c/ Cambio_segun_moneda_local__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Contrato (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>