force-app/main/default/objects/Proyecto__c/fields/Inventario__c.field-meta.xml
<CustomField>
    <fullName>Inventario__c</fullName>
    <formula>WIP__c +  Facturacion__c -  Cobrado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>