force-app/main/default/objects/Proyecto__c/fields/Inventario_EUR__c.field-meta.xml
<CustomField>
    <fullName>Inventario_EUR__c</fullName>
    <formula>IF(ISBLANK(Inventario__c),0,ROUND((Inventario__c/ Cambio_segun_moneda_local__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventario (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>