force-app/main/default/objects/Proyecto__c/fields/Inventario_FdP_EUR__c.field-meta.xml
<CustomField>
    <fullName>Inventario_FdP_EUR__c</fullName>
    <formula>WIP_FdP_EUR__c + Facturacion_FdP_EUR__c - Cobrado_FdP_EUR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventario (FdP EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>