force-app/main/default/objects/Proyecto__c/fields/Inventario_Produccion_media__c.field-meta.xml
<CustomField>
    <fullName>Inventario_Produccion_media__c</fullName>
    <formula>IF (Prod_media__c &gt; 0, IF (Inventario__c / Prod_media__c &gt; 6, &apos;&gt; 6&apos;, &apos;&lt; 6&apos;), &apos;&lt; 6&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventario / Producción media</label>
    <type>Text</type>
</CustomField>