force-app/main/default/objects/Proyecto__c/fields/Inventario_Razonable__c.field-meta.xml
<CustomField>
    <fullName>Inventario_Razonable__c</fullName>
    <formula>WIP_Razonable__c + Calculo_Pendiente_Cobro_Razonable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventario Razonable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>