force-app/main/default/objects/Proyecto__c/fields/Inventario_Razonable_IC__c.field-meta.xml
<CustomField>
    <fullName>Inventario_Razonable_IC__c</fullName>
    <formula>IF (Calculo_Inventario_Razonable_IC__c&gt;0.05 , &apos;&gt; 5%&apos;, &apos;&lt; 5%&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventario Razonable / IC</label>
    <type>Text</type>
</CustomField>