force-app/main/default/objects/Proyecto__c/fields/Margen_a_Origen_indicador__c.field-meta.xml
<CustomField>
    <fullName>Margen_a_Origen_indicador__c</fullName>
    <formula>IF (Margen_Real_a_Origen__c  &gt;= 0, &apos;&gt;0&apos;, &apos;&lt;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen a Origen</label>
    <type>Text</type>
</CustomField>