force-app/main/default/objects/Proyecto__c/fields/Margen_plan_EUR__c.field-meta.xml
<CustomField>
    <fullName>Margen_plan_EUR__c</fullName>
    <formula>IF(ISBLANK(margenplan__c ),0,ROUND((margenplan__c/ Cambio_segun_moneda_local__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen plan (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>