force-app/main/default/objects/Proyecto__c/fields/Margen_Plan_Margen_Prev__c.field-meta.xml
<CustomField>
    <fullName>Margen_Plan_Margen_Prev__c</fullName>
    <formula>IF (Margen_Previsto__c &lt;&gt; 0, IF (ABS(margenplan__c / Margen_Previsto__c) &gt; 0.15, &apos;&gt; 15%&apos;, &apos;&lt; 15%&apos;), &apos;&lt; 15%&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Plan / Margen Prev</label>
    <type>Text</type>
</CustomField>