force-app/main/default/objects/Proyecto__c/fields/Margen_Prev_Margen_Plan__c.field-meta.xml
<CustomField>
    <fullName>Margen_Prev_Margen_Plan__c</fullName>
    <formula>IF (margenplan__c &gt; 0, IF (1-(Margen_Previsto__c / margenplan__c) &gt; 0.20, &apos;&gt; 20%&apos;, &apos;&lt; 20%&apos;), 
				     IF(margenplan__c &lt;0,IF(-(1-(Margen_Previsto__c / margenplan__c))&gt;0.20, &apos;&gt; 20%&apos;, &apos;&lt; 20%&apos; ), &quot;&lt; 20%&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Prev / Margen Plan</label>
    <type>Text</type>
</CustomField>