force-app/main/default/objects/Proyecto__c/fields/Margen_Previsto__c.field-meta.xml
<CustomField>
    <fullName>Margen_Previsto__c</fullName>
    <formula>impcontrato__c - costeDirPrev__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Previsto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>