force-app/main/default/objects/Proyecto__c/fields/Margen_Previsto_EUR__c.field-meta.xml
<CustomField>
    <fullName>Margen_Previsto_EUR__c</fullName>
    <formula>IF(ISBLANK(Margen_Previsto__c ),0,ROUND((Margen_Previsto__c / Cambio_segun_moneda_local__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Previsto (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>