force-app/main/default/objects/Proyecto__c/fields/Margen_Previsto_FdP_EUR__c.field-meta.xml
<CustomField>
    <fullName>Margen_Previsto_FdP_EUR__c</fullName>
    <formula>impcontrato_FdP_EUR__c - costeDirPrev_FdP_EUR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Previsto (FdP EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>