force-app/main/default/objects/Proyecto__c/fields/Margen_Real_a_Origen__c.field-meta.xml
<CustomField>
    <fullName>Margen_Real_a_Origen__c</fullName>
    <formula>PR__c -  costeDirReal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Real a Origen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>