force-app/main/default/objects/Proyecto__c/fields/Margen_Real_a_Origen_EUR__c.field-meta.xml
<CustomField>
    <fullName>Margen_Real_a_Origen_EUR__c</fullName>
    <formula>IF(ISBLANK(Margen_Real_a_Origen__c ),0,ROUND((Margen_Real_a_Origen__c / Cambio_segun_moneda_local__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Real a Origen (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>