force-app/main/default/objects/Proyecto__c/fields/Margen_Real_year__c.field-meta.xml
<CustomField>
    <fullName>Margen_Real_year__c</fullName>
    <formula>Produccion_real_year__c -  Coste_Real_year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Real año</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>