force-app/main/default/objects/Proyecto__c/fields/Margen_Real_year_indicador__c.field-meta.xml
<CustomField>
    <fullName>Margen_Real_year_indicador__c</fullName>
    <formula>iF( Margen_Real_year__c &gt;=0, &quot;&gt;0&quot;,&quot;&lt;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Real en el año</label>
    <type>Text</type>
</CustomField>