force-app/main/default/objects/Proyecto__c/fields/MargenBrutoPrevisto__c.field-meta.xml
<CustomField>
    <fullName>MargenBrutoPrevisto__c</fullName>
    <description>El valor se trae de SAP</description>
    <label>Margen Bruto Previsto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>