force-app/main/default/objects/Proyecto__c/fields/margenplan__c.field-meta.xml
<CustomField>
    <fullName>margenplan__c</fullName>
    <description>El valor se trae de SAP</description>
    <label>Margen Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>