force-app/main/default/objects/Proyecto__c/fields/Mes_Datos_Economicos__c.field-meta.xml
<CustomField>
    <fullName>Mes_Datos_Economicos__c</fullName>
    <formula>IF(ISBLANK(Fecha_Datos_Economicos__c), &quot;&quot;, TEXT(MONTH(Fecha_Datos_Economicos__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Fecha_Datos_Economicos__c)))</formula>
    <label>Mes de los Datos Económicos</label>
    <type>Text</type>
</CustomField>