force-app/main/default/objects/Proyecto__c/fields/Meses_Resto__c.field-meta.xml
<CustomField>
    <fullName>Meses_Resto__c</fullName>
    <formula>DuracionPrevista__c - DuracionReal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meses Resto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>