force-app/main/default/objects/Proyecto__c/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <description>El valor se trae de SAP</description>
    <label>Moneda</label>
    <length>80</length>
    <type>Text</type>
</CustomField>