force-app/main/default/objects/Proyecto__c/fields/Numero_Empleado_Responsable__c.field-meta.xml
<CustomField>
    <fullName>Numero_Empleado_Responsable__c</fullName>
    <label>Nº Empleado Responsable SAP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>