force-app/main/default/objects/Proyecto__c/fields/Otros_productos__c.field-meta.xml
<CustomField>
    <fullName>Otros_productos__c</fullName>
    <formula>IF(AND( Coste_Dir_Real_Coste_Dir_Prev__c &gt; Produccion_IC__c, Produccion_IC__c&gt;  Facturacion_IC__c), &quot;Verdadero&quot;, &quot;Falso&quot;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Otros productos</label>
    <type>Text</type>
</CustomField>