force-app/main/default/objects/Proyecto__c/fields/Pend_Cobro_Importe_Fact__c.field-meta.xml
<CustomField>
    <fullName>Pend_Cobro_Importe_Fact__c</fullName>
    <formula>IF (Facturacion__c &gt; 0, IF (Pendiente_Cobro__c / Facturacion__c &gt; 0.2, &apos;&gt; 20%&apos;, &apos;&lt; 20%&apos;), &apos;&lt; 20%&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pend Cobro / Importe Fact</label>
    <type>Text</type>
</CustomField>