force-app/main/default/objects/Proyecto__c/fields/Pendiente_Cobro__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_Cobro__c</fullName>
    <formula>Facturacion__c -  Cobrado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pendiente Cobro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>