force-app/main/default/objects/Proyecto__c/fields/Pendiente_Cobro_FdP_EUR__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_Cobro_FdP_EUR__c</fullName>
    <formula>Facturacion_FdP_EUR__c - Cobrado_FdP_EUR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pendiente Cobro (FdP EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>