force-app/main/default/objects/Proyecto__c/fields/Pendiente_Cobro_Razonable__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_Cobro_Razonable__c</fullName>
    <formula>IF (Calculo_Pendiente_Cobro_Razonable__c  &gt;= 0, &apos;&gt;0&apos;, &apos;&lt;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pendiente de Cobro Razonable</label>
    <type>Text</type>
</CustomField>