force-app/main/default/objects/Proyecto__c/fields/Peso_Hito_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Peso_Hito_Facturacion__c</fullName>
    <description>Sumatorio de GE: Peso Hito Facturación</description>
    <label>Peso Hito Facturación</label>
    <summarizedField>Entregable__c.Peso_Hito_Facturacion__c</summarizedField>
    <summaryForeignKey>Entregable__c.Proyecto__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>