force-app/main/default/objects/Proyecto__c/fields/Pesos_Hitos__c.field-meta.xml
<CustomField>
    <fullName>Pesos_Hitos__c</fullName>
    <formula>IF( Pesos_Hitos_Facturacion__c =1 , 
IMAGE( $Setup.Semaforo__c.Semaforo_Verde__c , &quot;Verde&quot;,30,30), 
IMAGE($Setup.Semaforo__c.Semaforo_rojo__c, &quot;Rojo&quot;,30,30) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Se mostrará verde cuando los Hitos de sus Grupos de Entregables pesen el 100%.</inlineHelpText>
    <label>Pesos Hitos</label>
    <type>Text</type>
</CustomField>