force-app/main/default/objects/Proyecto__c/fields/Pesos_Hitos_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Pesos_Hitos_Facturacion__c</fullName>
    <description>Suma el total de campos &quot;PESO FACTURACIÓN&quot; de todos los hitos del proyecto.</description>
    <label>Pesos Hitos Facturación</label>
    <summarizedField>Hito__c.Peso_Facturacion__c</summarizedField>
    <summaryForeignKey>Hito__c.Proyecto__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>