force-app/main/default/objects/Proyecto__c/fields/Porcentaje_de_producto__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_producto__c</fullName>
    <formula>ABS(Produccion_IC__c - Coste_Dir_Real_Coste_Dir_Prev__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta de producto (FdP EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>