force-app/main/default/objects/Proyecto__c/fields/Porcentaje_de_producto_indicador__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_producto_indicador__c</fullName>
    <formula>IF(abs(Produccion_IC__c - Coste_Dir_Real_Coste_Dir_Prev__c)&gt; 0.1, &apos;&gt; 10%&apos;, &apos;&lt; 10%&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentaje de producto indicador</label>
    <type>Text</type>
</CustomField>