force-app/main/default/objects/Proyecto__c/fields/PR__c.field-meta.xml
<CustomField>
    <fullName>PR__c</fullName>
    <label>Producción Real</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>