force-app/main/default/objects/Proyecto__c/fields/PR_diciembre__c.field-meta.xml
<CustomField>
    <fullName>PR_diciembre__c</fullName>
    <label>Producción diciembre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>