force-app/main/default/objects/Proyecto__c/fields/PR_diciembre_EUR__c.field-meta.xml
<CustomField>
    <fullName>PR_diciembre_EUR__c</fullName>
    <label>Producción diciembre (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>