force-app/main/default/objects/Proyecto__c/fields/PR_FdP_EUR__c.field-meta.xml
<CustomField>
    <fullName>PR_FdP_EUR__c</fullName>
    <label>Producción real (FdP EUR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>