force-app/main/default/objects/Proyecto__c/fields/PR_hace_3_meses__c.field-meta.xml
<CustomField>
    <fullName>PR_hace_3_meses__c</fullName>
    <label>Produccion hace 3 meses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>