force-app/main/default/objects/Proyecto__c/fields/PR_hace_3_meses_EUR__c.field-meta.xml
<CustomField>
    <fullName>PR_hace_3_meses_EUR__c</fullName>
    <label>Produccion hace 3 meses (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>