force-app/main/default/objects/Proyecto__c/fields/Prod_Factu__c.field-meta.xml
<CustomField>
    <fullName>Prod_Factu__c</fullName>
    <formula>IF(Facturacion_FdP_EUR__c &lt;&gt; 0, PR_FdP_EUR__c /  Facturacion_FdP_EUR__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[1] / [3]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>