force-app/main/default/objects/Proyecto__c/fields/Prod_IC_CosReal_CosPrev__c.field-meta.xml
<CustomField>
    <fullName>Prod_IC_CosReal_CosPrev__c</fullName>
    <formula>IF( Coste_Dir_Real_Coste_Dir_Prev__c&lt;&gt;0, Produccion_IC__c /  Coste_Dir_Real_Coste_Dir_Prev__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[1] / [2]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>