force-app/main/default/objects/Proyecto__c/fields/Prod_media__c.field-meta.xml
<CustomField>
    <fullName>Prod_media__c</fullName>
    <formula>if (CalculoDuracionReal__c &lt;&gt; 0, PR__c /  CalculoDuracionReal__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producción media</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>