force-app/main/default/objects/Proyecto__c/fields/Produccion_Avance__c.field-meta.xml
<CustomField>
    <fullName>Produccion_Avance__c</fullName>
    <description>Calcular producción en función del avance. Los datos están en la moneda local de cada proyecto.</description>
    <formula>impcontrato__c*( costeDirReal__c / costeDirPrev__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producción Avance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>