force-app/main/default/objects/Proyecto__c/fields/Produccion_Avance_EUR__c.field-meta.xml
<CustomField>
    <fullName>Produccion_Avance_EUR__c</fullName>
    <formula>IF(ISBLANK(Produccion_Avance__c),0,ROUND((Produccion_Avance__c/ Cambio_segun_moneda_local__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producción Avance EUR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>