force-app/main/default/objects/Proyecto__c/fields/Produccion_media_EUR__c.field-meta.xml
<CustomField>
    <fullName>Produccion_media_EUR__c</fullName>
    <description>Producción media, pasa a calcularse con el dato en EUR de la FdP</description>
    <formula>if (CalculoDuracionReal__c &lt;&gt; 0, PR_FdP_EUR__c / CalculoDuracionReal__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producción media (FdP EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>