force-app/main/default/objects/Proyecto__c/fields/Produccion_pendiente__c.field-meta.xml
<CustomField>
    <fullName>Produccion_pendiente__c</fullName>
    <formula>impcontrato_FdP_EUR__c - PR_FdP_EUR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producción pendiente (FdP EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>