force-app/main/default/objects/Proyecto__c/fields/Produccion_Real_EUR__c.field-meta.xml
<CustomField>
    <fullName>Produccion_Real_EUR__c</fullName>
    <formula>IF(ISBLANK(PR__c  ),0,ROUND((PR__c  / Cambio_segun_moneda_local__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Produccion Real (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>