force-app/main/default/objects/Proyecto__c/fields/Produccion_real_year__c.field-meta.xml
<CustomField>
    <fullName>Produccion_real_year__c</fullName>
    <formula>PR__c- PR_diciembre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producción real año</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>