force-app/main/default/objects/Proyecto__c/fields/Recurso__c.field-meta.xml
<CustomField>
    <fullName>Recurso__c</fullName>
    <formula>IF(AND( Prod_IC_CosReal_CosPrev__c  &gt; 0.95 ,  Prod_IC_CosReal_CosPrev__c &lt; 1.05),&quot;Verdadero&quot;, &quot;Falso&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurso</label>
    <type>Text</type>
</CustomField>