force-app/main/default/objects/Proyecto__c/fields/Responsable__c.field-meta.xml
<CustomField>
    <fullName>Responsable__c</fullName>
    <label>Responsable SAP</label>
    <length>40</length>
    <type>Text</type>
</CustomField>