force-app/main/default/objects/Proyecto__c/fields/Responsable_email__c.field-meta.xml
<CustomField>
    <fullName>Responsable_email__c</fullName>
    <label>Responsable SAP email</label>
    <length>40</length>
    <type>Text</type>
</CustomField>