force-app/main/default/objects/Proyecto__c/fields/Sub_area__c.field-meta.xml
<CustomField>
    <fullName>Sub_area__c</fullName>
    <label>Sub-área</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>A5</fullName>
            </value>
            <value>
                <fullName>A6</fullName>
            </value>
            <value>
                <fullName>A8</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
                <isActive>false</isActive>
                <label>A4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>