force-app/main/default/objects/Proyecto__c/fields/Supervisor_Final_de_Casos_por_Defecto__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Final_de_Casos_por_Defecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor Final de Casos por Defecto</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProyectosCasos</relationshipName>
    <type>Lookup</type>
</CustomField>