force-app/main/default/objects/Proyecto__c/fields/TerminosReferencia__c.field-meta.xml
<CustomField>
    <fullName>TerminosReferencia__c</fullName>
    <label>TDR&apos;s</label>
    <summaryForeignKey>Termino_de_Referencia__c.Proyecto__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>