force-app/main/default/objects/Proyecto__c/fields/WIP__c.field-meta.xml
<CustomField>
    <fullName>WIP__c</fullName>
    <formula>PR__c - Facturacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WIP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>