force-app/main/default/objects/Proyecto__c/fields/WIP_EUR__c.field-meta.xml
<CustomField>
    <fullName>WIP_EUR__c</fullName>
    <formula>IF(ISBLANK(WIP__c),0,ROUND((WIP__c/ Cambio_segun_moneda_local__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WIP (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>