force-app/main/default/objects/Proyecto__c/fields/WIP_FdP_EUR__c.field-meta.xml
<CustomField>
    <fullName>WIP_FdP_EUR__c</fullName>
    <formula>PR_FdP_EUR__c - Facturacion_FdP_EUR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WIP FdP EUR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>