force-app/main/default/objects/Proyecto__c/fields/WIP_ImporteContrato__c.field-meta.xml
<CustomField>
    <fullName>WIP_ImporteContrato__c</fullName>
    <formula>IF (impcontrato__c &gt; 0, IF (WIP__c / impcontrato__c &gt; 0.1, &apos;&gt; 10%&apos;, &apos;&lt; 10%&apos;), &apos;&lt; 10%&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WIP/Importe Contrato</label>
    <type>Text</type>
</CustomField>